<resources>
    <string name="app_name">MoviesApp</string>
    <string name="empty_movies_image">Imagen lista de películas vacías</string>
    <string name="error_image">Imagen de error</string>
    <string name="movie_poster">Poster de la película</string>
    <string name="rating">Rating</string>
    <string name="introduce">Introduce</string>
    <string name="details">Details</string>
    <string name="tab_to_play">Tab to play</string>
</resources>